--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Docplanner Group</title>
 </head>
 <body>
   <!-- Page Navigation -->
   <header>
-    <a href=""><img src="/images/FullLogo.png" width="268" alt=""></a>
+    <a href=""><img src="images/FullLogo.png" width="268" alt=""></a>
     <nav>
       <ul>
         <li><a href="#">About us</a></li>
@@ -25,7 +25,7 @@
 
     <!-- Hero Section -->
     <section id="hero">
-      <img src="/images/logo.png" width="40" alt="">
+      <img src="images/logo.png" width="40" alt="">
       <h1>Making the healthcare experience more human</h1>
       <div class="para">
         <p>
@@ -44,7 +44,7 @@
     <!-- Section Two -->
     <section id="two">
       <div class="twoChild">
-        <img src="/images/icon-patients.svg" alt="">
+        <img src="images/icon-patients.svg" alt="">
         <h1>For patients</h1>
         <p>Find a doctor, book a visit and solve any health-related doubt</p>
         <div class="selection">
@@ -68,7 +68,7 @@
       </div>
 
       <div class="twoChild">
-        <img src="/images/icon-doctors.svg" alt="">
+        <img src="images/icon-doctors.svg" alt="">
         <h1>For doctors</h1>
         <p>Save time managing visits and cut no-shows by half</p>
         <div class="selection">
@@ -91,7 +91,7 @@
         </div>
       </div>
       <div class="twoChild">
-        <img src="/images/icon-clinics.svg" alt="">
+        <img src="images/icon-clinics.svg" alt="">
         <h1>For clinics</h1>
         <p>Deliver an exceptional patient experience in your clinic</p>
         <div class="selection">
@@ -121,7 +121,7 @@
     <!-- Banner -->
 
     <section id="banner">
-      <img src="/images/banner.png" alt="">
+      <img src="images/banner.png" alt="">
     </section>
 
 
@@ -141,24 +141,24 @@
     <div class="section4fourparts">
       <div class="first2">
         <div id="leader">
-            <img src="/images/flag.png" alt="flag"/>
+            <img src="images/flag.png" alt="flag"/>
             <h3>Leader in 13 countries</h3>
           <p>Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile</p>
         </div>
       <div id="patients">
-          <img src="/images/patients.png" alt="patients"/>
+          <img src="images/patients.png" alt="patients"/>
           <h3>90,000,000 <br> patients</h3>
           <p>visit our websites each month</p>
         </div>
       </div>
       <div class="second2">
         <div id="appointments">
-            <img src="/images/visits.png" alt="visits"/>
+            <img src="images/visits.png" alt="visits"/>
             <h3>15,000,000 <br> appointments</h3>
             <p>booked last month</p>
         </div>
         <div id="doctors">
-          <img src="/images/doctors.png" alt="doctor"/>
+          <img src="images/doctors.png" alt="doctor"/>
           <h3>210,000 active doctors</h3>
           <p>trust our solutions</p>
         </div>
@@ -181,7 +181,7 @@
     <section id="section6">
       <div class="container">
         <div class="box">
-          <img src="/images/one.png" alt="">
+          <img src="images/one.png" alt="">
           <div class="inner">
           <p>Warsaw</p>
           <button>SEE OPENINGS</button>
@@ -189,7 +189,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/two.png" alt="">
+          <img src="images/two.png" alt="">
           <div class="inner">
           <p>Barcelona</p>
           <button>SEE OPENINGS</button>
@@ -197,7 +197,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/three.png" alt="">
+          <img src="images/three.png" alt="">
           <div class="inner">
             <p>Munich</p>
           <button>SEE OPENINGS</button>
@@ -205,7 +205,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/four.png" alt="">
+          <img src="images/four.png" alt="">
           <div class="inner">
             <p>Istanbul</p>
           <button>SEE OPENINGS</button>
@@ -213,7 +213,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/five.png" alt="">
+          <img src="images/five.png" alt="">
           <div class="inner">
             <p>Rome</p>
           <button>SEE OPENINGS</button>
@@ -221,7 +221,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/six.png" alt="">
+          <img src="images/six.png" alt="">
           <div class="inner">
             <p>Bologna</p>
           <button>SEE OPENINGS</button>
@@ -229,7 +229,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/seven.png" alt="">
+          <img src="images/seven.png" alt="">
           <div class="inner">
             <p>Curitiba</p>
           <button>SEE OPENINGS</button>
@@ -237,7 +237,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/eight.png" alt="">
+          <img src="images/eight.png" alt="">
           <div class="inner">
             <p>Rio De Janeiro</p>
           <button>SEE OPENINGS</button>
@@ -245,7 +245,7 @@
         </div>
 
         <div class="box">
-          <img src="/images/nine.png" alt="">
+          <img src="images/nine.png" alt="">
           <div class="inner">
             <p>Mexico City</p>
           <button>SEE OPENINGS</button>
